# cli_proxy

./: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.cursor/rules/: README.md  auth-system.mdc  cli-development.mdc  config-management.mdc  filter-system.mdc  git-commit-guide.mdc  project-overview.mdc  proxy-architecture.mdc  python-code-style.mdc  testing-guidelines.mdc  ui-development.mdc
src/: main.py
src/auth/: __init__.py  auth_manager.py  fastapi_middleware.py  flask_middleware.py  token_generator.py
src/claude/: ctl.py
src/codex/: ctl.py
src/config/: cached_config_manager.py  config_manager.py
src/core/: base_proxy.py  realtime_hub.py
src/filter/: cached_endpoint_filter.py  cached_header_filter.py  header_filter.py
src/ui/: ui_server.py
src/ui/static/: app.js  index.html  realtime-manager.js  style.css
src/utils/: usage_parser.py
tests/integration/: test_endpoint_filter.py  test_usage_details.py
tests/unit/: test_config_managers.py
