[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clp"
version = "1.11.0"
description = "本地CLI代理工具"
authors = [
    {name = "gjp"}
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    # 收紧上限，减少 pip 解析回溯时间
    "flask>=2.0,<3",
    "fastapi>=0.110,<0.116",
    "httpx>=0.27,<0.28",
    "requests>=2.25,<3",
    "aiohttp>=3.12,<3.13",
    "gunicorn>=20.0.0; sys_platform != 'win32'",
    "waitress>=2.1.0; sys_platform == 'win32'",
    "psutil>=5.8,<7",
    "urllib3>=2.0,<3",
    "uvicorn[standard]>=0.30,<0.31"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
clp = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.ui" = ["static/*"]
